--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 </head>
 <body>
     <header>
-        <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul> 
+
+        <nav class="menu">
+            <ul>
+                <img src="asset/webdev.svg" alt="logo">
+                <li><a href="#">mon cv</a></li>
+                <li><a href="#">mes projets</a></li>
+                <li><a href="#">me contacter</a></li>
+            </ul> 
+        </nav>
     </header>
     <main>
 
