--- a/index.html
+++ b/index.html
@@ -22,6 +22,38 @@
         </nav>
     </header>
     <main>
+        <section>
+            <div class="dev">
+                <h1>Charlie Doe</h1>
+                <h2>Développeur web</h2>
+            </div>
+            <div>
+                <img src="asset/html.svg" alt="logo">
+            </div>
+        </section>
+        <section>
+            <h3>Derniers Projet</h3>
+            <div class="container">
+                <div class="projet">
+                    <h4>BUBBLE & CO</h4>
+                    <h5>Refonte de site</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, dolorum.</p>
+                    <p><a href="#">Découvrir le projet</a></p>
+                </div>
+                <div class="projet">
+                    <h4>JUMP THE BANDWAGON</h4>
+                    <h5>Création du site</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, dolorum.</p>
+                    <p><a href="#">Découvrir le projet</a></p>
+                </div>
+                <div class="projet">
+                    <h4>OILS OF THE NATURE</h4>
+                    <h5>Refonte de la boutique</h5>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, dolorum.</p>
+                    <p><a href="#">Découvrir le projet</a></p>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
