--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main>
-        <section>
+        <section class="sect1">
             <div class="dev">
                 <h1>Charlie Doe</h1>
                 <h2>Développeur web</h2>
@@ -31,7 +31,7 @@
                 <img src="asset/html.svg" alt="logo">
             </div>
         </section>
-        <section>
+        <section class="sect2">
             <h3>Derniers Projet</h3>
             <div class="container">
                 <div class="projet">
