--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <nav class="menu">
             <ul>
-                <img src="asset/webdev.svg" alt="logo">
+                <img class="logo" src="asset/webdev.svg" alt="logo">
                 <li><a href="#">mon cv</a></li>
                 <li><a href="#">mes projets</a></li>
                 <li><a href="#">me contacter</a></li>
@@ -28,25 +28,25 @@
                 <h2>Développeur web</h2>
             </div>
             <div>
-                <img src="asset/html.svg" alt="logo">
+                <img class="dev-img" src="asset/html.svg" alt="logo">
             </div>
         </section>
         <section class="sect2">
             <h3>Derniers Projet</h3>
             <div class="container">
-                <div class="projet">
+                <div class="projet g1">
                     <h4>BUBBLE & CO</h4>
                     <h5>Refonte de site</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, dolorum.</p>
                     <p><a href="#">Découvrir le projet</a></p>
                 </div>
-                <div class="projet">
+                <div class="projet m2">
                     <h4>JUMP THE BANDWAGON</h4>
                     <h5>Création du site</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, dolorum.</p>
                     <p><a href="#">Découvrir le projet</a></p>
                 </div>
-                <div class="projet">
+                <div class="projet d3">
                     <h4>OILS OF THE NATURE</h4>
                     <h5>Refonte de la boutique</h5>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, dolorum.</p>
