--- a/index.html
+++ b/index.html
@@ -23,13 +23,12 @@
     </header>
     <main>
         <section class="sect1">
-            <div class="dev">
+            <div class="dev1">
                 <h1>Charlie Doe</h1>
                 <h2>Développeur web</h2>
             </div>
-            <div>
-                <img class="dev-img" src="asset/html.svg" alt="logo">
-            </div>
+            <img class="dev-img" src="asset/webdev.svg" alt="logo">
+
         </section>
         <section class="sect2">
             <h3>Derniers Projet</h3>
