--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         </section>
         <section class="sect2">
-            <h3>Derniers Projet</h3>
+            <h3>Derniers Projets</h3>
             <div class="container">
                 <div class="projet g1">
                     <h4>BUBBLE & CO</h4>
